# tower-otel-http-metrics

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  otel-collector-config.yaml  prometheus.yml
cicd/helm/echo-server/: Chart.yaml  values.yaml
cicd/helm/echo-server/templates/: deployment.yaml  hpa.yaml  ingress.yaml
development/: README.md  docker-compose.yaml
development/config/: otel-collector-config.yaml
development/load-gen/: echo-all.js
examples/: docker-compose.yaml  otel-collector-config.yaml
examples/axum-http-service/: Cargo.toml
examples/axum-http-service/src/: main.rs
examples/hyper-http-service/: Cargo.toml
examples/hyper-http-service/src/: main.rs
examples/tower-http-service/: Cargo.toml  Dockerfile.tower
examples/tower-http-service/src/: main.rs
load-gen/: echo-all.js
server/: Cargo.toml
server/src/: lib.rs  main.rs
src/: lib.rs
