[package]
name = "tower-otel-http-metrics"
edition = "2021"
version = "0.2.1"
license = "MIT"
description = "OpenTelemetry Metrics Middleware for Tower-compatible Rust HTTP servers"
homepage = "https://github.com/francoposa/tower-otel-http-metrics"
repository = "https://github.com/francoposa/tower-otel-http-metrics"
documentation = "https://docs.rs/tower-otel-http-metrics"
readme = "README.md"
include = ["src/"]

[features]
default = []
axum = ["dep:axum"]

[dependencies]
axum = { features = ["matched-path"], version = "0.7", default-features = false, optional = true }
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
http = { version = "1", features = ["std"], default-features = false }
opentelemetry_api = { version = "0.20", features = ["metrics"], default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
tower = { version = "0.4", default-features = false }
tower-service = { version = "0.3", default-features = false }
tower-layer = { version = "0.3", default-features = false }
