[package]
name = "echo-server-logging-metrics-tracing"
edition = "2021"
version = "0.1.0-alpha.0"

[dependencies]
axum = { features = ["http1", "http2", "json", "matched-path"], version = "0.6.*", default-features = false }
hyper = { version = "*", features = ["tcp", "server"], default-features = false }
metrics = "*"
metrics-exporter-prometheus = "0.12.0"
opentelemetry = { version = "0.18.0", features = ["metrics", "rt-tokio"], default-features = false }
opentelemetry_api = "0.18"
opentelemetry-semantic-conventions = "0.10"
opentelemetry-otlp = { version = "0.11", features = ["metrics", "grpc-tonic"] }
serde = { version = "1.*", features = ["serde_derive"], default-features = false }
serde_json = { version = "1.*", default-features = false }
tokio = { version = "*", features = ["macros", "rt-multi-thread"], default-features = false }
tower = { version = "*", default-features = false }
tower-http = { version = "*", features = ["trace"], default-features = false }
tracing = { version = "*", features = ["attributes"], default-features = false }
tracing-appender = { version = "*", default-features = false }
tracing-bunyan-formatter = { version = "*", default-features = false }
tracing-opentelemetry = { version = "0.18", features = ["metrics"], default-features = false }
tracing-subscriber = { version = "*", features = ["json"], default-features = false }
