[package]
name = "echo-server-logging-metrics-tracing"
edition = "2021"
version = "0.1.0-alpha.0"

[dependencies]
axum = { features = ["matched-path", "json"], version = "0.6.*", default-features = false }
hyper = { version = "*", default-features = false }
bytes = { version = "1.*", default-features = false }
futures-core = { version = "0.3.*", default-features = false }
futures-util = { default-features = false, version = "0.3.*" }
http-body = { version = "0.4.*", default-features = false }
opentelemetry = { version = "0.20.*", features = ["rt-tokio"], default-features = false }
opentelemetry_api = { version = "0.20.*", default-features = false }
opentelemetry-semantic-conventions = { version = "0.12.*", default-features = false }
opentelemetry-otlp = { version = "0.13.*", features = ["metrics", "trace"], default-features = false }
pin-project-lite = { version = "0.2.*", default-features = false }
serde = { version = "1.*", features = ["serde_derive"], default-features = false }
serde_json = { version = "1.*", default-features = false }
tokio = { version = "*", features = ["rt-multi-thread"], default-features = false }
tower = { version = "*", default-features = false }
tower-http = { version = "*", features = ["trace"], default-features = false }
tracing = { version = "*", default-features = false }
tracing-appender = { version = "*", default-features = false }
tracing-bunyan-formatter = { version = "*", default-features = false }
tracing-opentelemetry = { version = "0.21.0", features = ["metrics"], default-features = false }
tracing-subscriber = { version = "*", features = ["json"], default-features = false }
