[package]
name = "example-axum-http-service"
version = "0.1.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower_otel_http_metrics = { path = "../../", package = "tower-otel-http-metrics", features = ["axum"], default-features = false }
axum = { features = ["http1", "tokio"], version = "0.7", default-features = false }
bytes = { version = "1", default-features = false }
opentelemetry = { version = "0.26", default-features = false }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"], default-features = false }
opentelemetry-semantic-conventions = { version = "0.26", default-features = false }
opentelemetry-otlp = { version = "0.26", features = ["metrics", "grpc-tonic"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"], default-features = false }
