[package]
name = "example-tower-http-service"
version = "0.1.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower_otel_http_metrics = { path = "../../../tower-otel-http-metrics", package = "tower-otel-http-metrics" }
hyper = { version = "*", default-features = false }
opentelemetry = { version = "0.20.*", features = ["rt-tokio"], default-features = false }
opentelemetry-otlp = { version = "0.13.0", features = ["metrics"], default-features = false }
opentelemetry-semantic-conventions = { version = "0.12.0", default-features = false }
tokio = { version = "*", features = ["rt-multi-thread"], default-features = false }
tower = { version = "*", features = ["make"], default-features = false }
tower-http = { version = "*", default-features = false }
