[package]
name = "example-tower-http-service"
version = "0.1.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower_otel_http_metrics = { path = "../../../tower-otel-http-metrics", package = "tower-otel-http-metrics", default-features = false }
bytes = { version = "1", default-features = false }
hyper = { version = "1", default-features = false }
http-body-util = { version = "0.1", default-features = false }
hyper-util = { version = "0.1", features = ["http1", "service", "server", "tokio"], default-features = false }
opentelemetry = { version = "0.22", default-features = false }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"], default-features = false }
opentelemetry-semantic-conventions = { version = "0.14", default-features = false }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic", "metrics"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], default-features = false }
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.5", default-features = false }
